objects/Contact_To_Group__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contacts To Groups</relationshipLabel>
        <relationshipName>Contacts_To_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Claim_System__c</fullName>
        <formula>TEXT(Group__r.ClaimSystem__c)</formula>
        <label>Claim System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Name</label>
        <referenceTo>ContactRelationship__c</referenceTo>
        <relationshipLabel>Contacts To Groups</relationshipLabel>
        <relationshipName>Contacts_To_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Number</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipLabel>Contacts To Groups</relationshipLabel>
        <relationshipName>Contacts_To_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <formula>Group__r.IsActive__c</formula>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <formula>Contact_Relationship__r.Phone__c</formula>
        <label>Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>Contact_Relationship__r.Title__c</formula>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <label>Contact To Group</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CTG-{000}</displayFormat>
        <label>Contact To Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contacts To Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>